feat(groups): controller
